[package]
name = "arctic"
version = "0.1.0"
edition = "2021"

[features]
stat = ["dep:serde", "dep:base64", "dep:hdrhistogram"]
opt-no-node3-get = []
opt-no-node3-iter = []
opt-no-node15-get = []
opt-no-node15-iter = []
opt-no-node47-iter = []
opt-no-int = []
opt-no-expand = []
opt-membarrier = ["dep:libc"]
opt-no-path = []
opt-no-dispatch = []

smr-disable = []
smr-epoch = []

validate = []

[dependencies]
base64 = { version = "0.22.1", optional = true }
crossbeam-epoch = { version = "0.9.18" }
hdrhistogram = { version = "7.5.4", optional = true, default-features = false, features = ["serialization"] }
libc = { version = "0.2.176", optional = true }
polonius-the-crab = "0.4.2"
ribbit = { git = "https://github.com/nwtnni/ribbit.git", features = ["atomic-u128"] }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
thread_local = { git = "https://github.com/nwtnni/thread_local-rs.git" }

[dev-dependencies]
proptest = "1.9.0"
proptest-state-machine = "0.6.0"
rand = "0.9"
rapidhash = "4.0.0"
