[package]
name = "arctic"
version = "0.1.0"
edition = "2024"

[features]
stat = ["dep:serde", "dep:base64", "dep:hdrhistogram"]
opt-no-node3-get = []
opt-no-node3-iter = []
opt-no-node15-get = []
opt-no-node15-iter = []
opt-no-node47-iter = []
opt-no-int = []
opt-no-expand = []
opt-membarrier = ["dep:libc", "seize/fast-barrier"]
opt-no-path = []
opt-no-dispatch = []
opt-amortized-free-guard = ["seize/amortized-free-guard"]
opt-amortized-free-retire = ["seize/amortized-free-retire"]

smr-disable = []
# FIXME: make these dependencies optional
# smr-epoch = ["dep:crossbeam-epoch"]
# smr-seize = ["dep:seize"]
smr-epoch = []
smr-seize = []

validate = []

[dependencies]
base64 = { version = "0.22.1", optional = true }
hdrhistogram = { version = "7.5.4", optional = true, default-features = false, features = ["serialization"] }
libc = { version = "0.2.176", optional = true }
ribbit = { git = "https://github.com/nwtnni/ribbit.git", features = ["atomic-u128"] }
seize = { git = "https://github.com/migopp/seize.git", default-features = false, features = ["libc"] }
serde = { version = "1.0.219", optional = true, features = ["derive"] }

# https://github.com/kaist-cp/smr-benchmark/blob/00b4e4d06d9b91f289b4644163f0cac0660d4af7/Cargo.toml#L42-L45
[dependencies.crossbeam-epoch]
git = "https://github.com/kaist-cp/crossbeam"
branch = "smr-benchmark"
# version = "0.9.18"
# optional = true

[dev-dependencies]
proptest = "1.9.0"
proptest-state-machine = "0.6.0"
rand = "0.9"
rapidhash = "4.0.0"
